--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- <link href="https://fonts.googleapis.com/css2?family=Acme&family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&family=Oswald:wght@200;300;400&family=Poiret+One&family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet"> -->
 
-<link href="https://fonts.googleapis.com/css2?family=Acme&family=DM+Serif+Display:ital@0;1&family=Marcellus&family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&family=Oswald:wght@200;300;400&family=Poiret+One&family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Kaushan+Script&family=DM+Serif+Display:ital@0;1&family=Marcellus&family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&family=Oswald:wght@200;300;400&family=Poiret+One&family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
