--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>PortfolioNg</title>
+  <title>Astrid Perillat</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!-- <link href="https://fonts.googleapis.com/css2?family=Acme&family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&family=Oswald:wght@200;300;400&family=Poiret+One&family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet"> -->
 
 <link href="https://fonts.googleapis.com/css2?family=Acme&family=Kaushan+Script&family=DM+Serif+Display:ital@0;1&family=Marcellus&family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&family=Oswald:wght@200;300;400&family=Poiret+One&family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
